# gallery-dl-web

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  docker-compose.dev.yml  docker-compose.hostdir.yml  docker-compose.yml
.github/workflows/: ci.yml  docker-publish.yml  security.yml
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
backend/src/gallery_dl_web/: __init__.py  __main__.py  config.py
backend/src/gallery_dl_web/api/: __init__.py  app.py  deps.py  paths.py  routes_files.py  routes_health.py  routes_jobs.py  routes_profiles.py  routes_settings.py
backend/src/gallery_dl_web/cookies/: __init__.py  store.py
backend/src/gallery_dl_web/gallerydl/: __init__.py  config_builder.py  errors.py  events.py  worker.py
backend/src/gallery_dl_web/jobs/: __init__.py  manager.py  models.py  worker_runner.py
backend/src/gallery_dl_web/profiles/: __init__.py  store.py  thumbnails.py  urls.py
backend/src/gallery_dl_web/schemas/: files.py  jobs.py  profiles.py  settings.py
backend/tests/: conftest.py  test_main.py
backend/tests/api/: test_app.py  test_routes_files.py  test_routes_health.py  test_routes_jobs.py  test_routes_profiles.py  test_routes_settings.py
backend/tests/cookies/: test_store.py
backend/tests/gallerydl/: test_config_builder.py  test_errors.py  test_events.py  test_worker.py
backend/tests/jobs/: test_control.py  test_manager.py  test_manager_pacing.py  test_models.py  test_stall.py  test_worker_runner.py
backend/tests/profiles/: test_store.py  test_thumbnails.py  test_urls.py
docs/: event-contract.md
extension/: README.md  manifest.json  popup.html  popup.js  theme.js
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CookieForm.tsx  FileList.tsx  JobControls.tsx  JobProgress.tsx  (+7 more)
(+12 files in other folders)
